test_suite/tests/ui/default-attribute/incorrect_type_enum_adjacently_tagged.stderr
error[E0308]: `match` arms have incompatible types
  --> tests/ui/default-attribute/incorrect_type_enum_adjacently_tagged.rs:10:33
   |
5  | #[derive(Deserialize)]
   |          -----------
   |          |
   |          this is found to be of type `i8`
   |          `match` arms have incompatible types
...
10 |     Tuple(u8, #[serde(default = "main")] i8),
   |                                 ^^^^^^ expected `i8`, found `()`

error[E0308]: `match` arms have incompatible types
  --> tests/ui/default-attribute/incorrect_type_enum_adjacently_tagged.rs:12:27
   |
5  | #[derive(Deserialize)]
   |          -----------
   |          |
   |          this is found to be of type `u8`
   |          `match` arms have incompatible types
...
12 |         #[serde(default = "main")]
   |                           ^^^^^^ expected `u8`, found `()`

error[E0308]: `match` arms have incompatible types
  --> tests/ui/default-attribute/incorrect_type_enum_adjacently_tagged.rs:15:27
   |
5  | #[derive(Deserialize)]
   |          -----------
   |          |
   |          this is found to be of type `i8`
   |          `match` arms have incompatible types
...
15 |         #[serde(default = "main")]
   |                           ^^^^^^ expected `i8`, found `()`
